# payment-collection-agent

./: .env.example  .gitignore  Makefile  README.md  agent.py  cli.py  design_doc.md  eval.py  payment_agent_requirements.md  pyproject.toml  requirements.txt  tools.py  validators.py
apps/: cli.py
docs/: conversations.md  design.md  test_accounts.md
scripts/: fetch_test_accounts.py
src/payment_agent/: __init__.py  agent.py  api_client.py  config.py  exceptions.py  llm.py  models.py  redaction.py  validators.py  verification.py
src/payment_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/payment_agent/fsm/: __init__.py  machine.py  states.py
src/payment_agent/fsm/handlers/: __init__.py  greeting.py  payment.py  verification.py
src/payment_agent/prompts/: extraction_system.txt  response_system.txt
tests/e2e/: test_agent_flows.py
